--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,120 @@
-.App {
-  text-align: center;
+*,
+::after,
+::before {
+  box-sizing: border-box;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.container {
+  font-family: "DM Sans", sans-serif;
+  max-width: 500px;
+  background: #0077b3;
   color: white;
+  margin: 4rem auto;
+  padding: 2rem 3rem 3rem;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.77);
 }
-
-.App-link {
-  color: #61dafb;
+.title {
+  border-bottom: 1px solid white;
+  font-weight: normal;
+  font-size: 2.5rem;
+  letter-spacing: 0.2rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title span {
+  display: block;
+  font-size: 0.8rem;
+  margin-bottom: 0.7rem;
+  margin-top: 0.4rem;
+  margin-left: 0.4rem;
+}
+.task-list {
+  list-style: none; /*   bo dau cham dau dong */
+  margin-top: 2rem;
+}
+.task-list li {
+  max-width: 420px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: rgba(255, 255, 255, 0.1);
+  /*background trang co transition de lay duoc mau xanh cua nen phia sau*/
+  margin: 0 -3rem 4px;
+  padding: 1.1rem 3rem;
+  /*dieu chinh thoi gian de chuyen doi - vdu khi fall */
+  transition: all 0.5s ease;
+  transform-origin: top left;
+}
+/* tao hieu ung khi click de roi xuong */
+.fall {
+  transform: rotate(10deg);
+  opacity: 0;
+}
+.task-list .actions {
+  flex-shrink: 0;
+  padding-left: 0.7em;
+}
+.task-list .btn-action {
+  border: none;
+  background: none;
+  cursor: pointer;
+  color: #fff;
+}
+input[type="checkbox"] {
+  cursor: pointer;
+  width: 1.2rem;
+  height: 1.2rem;
+}
+/* dua vao giua */
+.task-list input[type="checkbox"] {
+  position: relative;
+  top: 0.3rem;
+}
+.task-list .label {
+  transition: opacity 0.2s linear;
+}
+/* khi complete se gach ngang task - tao ra tag done */
+.task-list .done .label {
+  opacity: 0.6;
+  text-decoration: line-through;
+}
+.filter-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.form {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 3rem;
+}
+.form label {
+  min-width: 100%; /*day cac thanh phan khac xuong dong tiep theo*/
+  margin-bottom: 0.5rem;
+  font-size: 1.3rem;
+}
+.form input {
+  flex-grow: 1;
+  border: none;
+  background: #f7f1f1;
+  padding: 0 1.5em;
+  font-size: initial;
+}
+.form button {
+  padding: 0 1.3rem;
+  background: #0077b3;
+  border: none;
+  color: white;
+  text-transform: uppercase;
+  font-weight: bold;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  margin-left: 5px;
+  cursor: pointer;
+  transition: background 0.2s ease-out;
+}
+.form button:hover {
+  filter: brightness(110%);
+}
+.form input,
+.form button {
+  font-family: "Quicksand", sans-serif;
+  height: 3rem;
 }
